<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="invitation_action">com.avoscloud.chat.INVITATION_ACTION</string>


    <string name="app_name">TATA</string>


    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>

    <string name="update_service_failedToGetData">获取数据失败</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="publish">发布</string>
    <string name="publish_note">写动态</string>
    <string name="conversation_messages">聊天</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我</string>
    <string name="discover_title">发现</string>
    <string name="square_title">广场</string>
    <string name="publish_friend_title">发布</string>

    <string name="login_username_hint">请输入用户名</string>
    <string name="publish_text_hint">说点什么吧...</string>
    <string name="publish_picture_hint">照片</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="publish_age">请输入年龄</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_person">个人中心</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>
    
    <string name="utils_kilometres">公里</string>
    <string name="refreshable_view_pull_to_refresh">下拉可以刷新</string>
    <string name="refreshable_view_release_to_refresh">释放立即刷新</string>
    <string name="refreshable_view_refreshing">正在刷新…</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="discover_fragment_sort">排序</string>
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="chat_xlistview_footer_hint_normal">查看更多</string>
    <string name="chat_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>


    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <!-- 侧栏菜单 -->
    <string name="settings">设置</string>
    <string name="check_update">检查更新</string>
    <string name="logout">注销</string>
    
    <!-- 广场下拉刷新 -->
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放刷新</string>
    <string name="header_hint_refresh_loading">刷新中</string>
    <string name="header_hint_refresh_time">刷新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
</resources>