<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray"
    tools:context="com.avoscloud.chat.activity.PublishActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pub_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/publish_note"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_publish_btn"
                android:layout_width="50dp"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/common_pubbtn"
                android:text="@string/publish"
                android:textColor="@color/chat_base_color_text_white"
                android:textSize="@dimen/text_size_large"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/activity_publish_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/publish_text_height"
            android:layout_marginTop="0dp"
            android:gravity="left|top"
            android:hint="@string/publish_text_hint"
            android:textColorHint="#ffdddddd"
            android:textSize="@dimen/text_size_middle"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:background="@null" >
        </EditText>

        <GridView
            android:id="@+id/noScrollgridview"
            android:layout_width="290dp"
            android:layout_height="230dp"
            android:layout_marginLeft="5dp"
            android:horizontalSpacing="3dp"
            android:numColumns="4"
            android:scrollbars="none"
            android:verticalSpacing="5dp" >
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pub_line"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        <ListView
            android:id="@+id/publish_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice">
        </ListView>
    </LinearLayout>

</RelativeLayout>



